:bug:解决买卖单合并最后一条买卖单挂单量计算出错